--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
