--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@headlessui/react": "^1.7.18",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.2.10",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
-    "next": "14.1.0",
+    "next": "^14.2.4",
     "next-auth": "^4.24.6",
     "next-cloudinary": "^6.0.1",
     "react": "^18",
@@ -21,7 +22,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
