--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.12.0",
-    "eslint-config-next": "14.2.15",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^15.0.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
