--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,33 @@
+networks:
+  ari: {}
+
 services:
-  web:
+  frontend-next:
     build:
       context: .
       dockerfile: Dockerfile
     environment:
-      - MONGODB_URL=${MONGODB_URL}
+      MONGODB_URL: ${MONGODB_URL}
     ports:
-      - 3005:3005
+      - 3000:3000
     depends_on:
       - mongo
+    networks:
+      - ari
 
   mongo:
-    image: mongo
+    image: mongo:latest
     ports:
       - 27017:27017
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     volumes:
       - mongo-data:/data/db
+    networks:
+      - ari
+
 volumes:
   mongo-data: {}
-
