--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
-    "csurf": "^1.2.2",
+    "csurf": "^1.11.0",
     "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
     "framer-motion": "^11.11.11",
@@ -35,9 +38,15 @@
     "swagger-ui-react": "^5.17.14"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-istanbul": "^7.0.0",
     "eslint": "^9.14.0",
     "eslint-config-next": "^15.0.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
